--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <p>my code blocke html</p>
 <ul id="list"></ul>
 <input id="text" />
-<button id="button">add Todo Item</button>
-<button id="button1">remove Todo Item</button>
+<button id="button">TYPE YOUR NAME</button>
+<button id="button1">remove</button>
 
 
 <script>
