--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <style>
-    li{
+    lu{
+      width:100px;
       Background-color:orangered;
     </style>
 
@@ -31,7 +32,7 @@ document.getElementById('button').addEventListener('click', (event) => {
 
   element_list.appendChild(new_li);
   let new_span = document.createElement('span');
-  new_span.innerText = 'You are smart';
+  new_span.innerText = 'You are smart😇';
 
   element_list.appendChild(new_span);
 
